Alteração no index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
     </header>
     <main>
         <section id="contato" class="section contato">
-            <h1>Bem-vindo</h1>
+            <div class="textos">
+                <h1 class="nomePg01">Alysson</h1>
+                <h1 class="sobrenomePg01">Nunes</h1>
+                <p class="paragrafoPg01">Desenvolvedor Web Front-End</p>
+                <hr>
+                <div class="btnPg01">
+                    <button class="btnSobre"><a href="#sobre">Sobre</a></button>
+                    <button class="btnResumo"><a href="#resumo">Resumo</a></button>
+                </div>
+                <div class="links">
+                  <a href="https://github.com/Alyssonln" target="_blank"><img src="./img/github.jpg" alt=""></a>
+                  <a href="https://www.linkedin.com/in/alysson-nunes" target="_blank"><img src="./img/linkedin.jpg" alt=""></a>
+                  <a href="https://www.instagram.com/alyssonlnunes/" target="_blank"><img src="./img/instagram.jpg" alt=""></a>
+                </div>
+            </div>
         </section>
         <section id="sobre" class="section sobre">
             <h1>Sobre Nós</h1>
