alteração no index.html e style.css

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 </head>
 <body>
     <header class="navbar">
-        <nav>
-            <ul class="menu">
-                <li><a href="#contato">Contato</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#resumo">Resumo</a></li>
-            </ul>
+        <nav class="menu">
+            <a href="#contato"><img src="./img/logoHome.jpg" alt=""></a>
         </nav>
     </header>
     <main>
@@ -24,8 +20,7 @@
                 <p class="paragrafoPg01">Desenvolvedor Web Front-End</p>
                 <hr>
                 <div class="btnPg01">
-                    <button class="btnSobre"><a href="#sobre">Sobre</a></button>
-                    <button class="btnResumo"><a href="#resumo">Resumo</a></button>
+                    <button class="btnSobre"><a href="#sobre">Software Skills</a></button>
                 </div>
                 <div class="links">
                   <a href="https://github.com/Alyssonln" target="_blank"><img src="./img/github.jpg" alt=""></a>
@@ -34,11 +29,8 @@
                 </div>
             </div>
         </section>
-        <section id="sobre" class="section sobre">
-            <h1>Sobre Nós</h1>
-        </section>
-        <section id="resumo" class="section resumo">
-            <h1>Fale Conosco</h1>
+        <section id="sobre" class=" section sobre">
+          
         </section>
     </main>
 </body>
