Mudanças no index.html / mudanças no style.css / alteração das fotos na pasta img

--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
 <body>
     <header class="navbar">
         <nav class="menu">
-            <a href="#contato"><img src="./img/logoHome.jpg" alt=""></a>
+            <a href="#home"><img src="./img/logoHome.jpg" alt=""></a>
         </nav>
     </header>
     <main>
-        <section id="contato" class="section contato">
+        <section id="home" class="section home">
             <div class="textos">
                 <h1 class="nomePg01">Alysson</h1>
                 <h1 class="sobrenomePg01">Nunes</h1>
                 <p class="paragrafoPg01">Desenvolvedor Web Front-End</p>
                 <hr>
                 <div class="btnPg01">
-                    <button class="btnSobre"><a href="#sobre">Software Skills</a></button>
+                    <button class="btnSkills"><a href="#skills">Software Skills</a></button>
                 </div>
                 <div class="links">
-                  <a href="https://github.com/Alyssonln" target="_blank"><img src="./img/github.jpg" alt=""></a>
-                  <a href="https://www.linkedin.com/in/alysson-nunes" target="_blank"><img src="./img/linkedin.jpg" alt=""></a>
-                  <a href="https://www.instagram.com/alyssonlnunes/" target="_blank"><img src="./img/instagram.jpg" alt=""></a>
+                    <a href="https://github.com/Alyssonln" target="_blank"><img src="./img/github.jpg" alt=""></a>
+                    <a href="https://www.linkedin.com/in/alysson-nunes" target="_blank"><img src="./img/linkedin.jpg" alt=""></a>
+                    <a href="https://www.instagram.com/alyssonlnunes/" target="_blank"><img src="./img/instagram.jpg" alt=""></a>
                 </div>
             </div>
         </section>
-        <section id="sobre" class=" section sobre">
-          
+        <section id="skills" class=" section skills">
+            <div class="paragrafo">
+                <p>
+                    Continue curioso, continue aprendendo e continue crescendo. Sempre se esforce para ser melhor do que ontem.
+                    <br><br>
+                    <span>— Chris Coyier</span>
+                </p>
+            </div>
         </section>
     </main>
 </body>
