--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
+    <title>Presentation</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -17,25 +17,16 @@
             <div class="textos">
                 <h1 class="nomePg01">Alysson</h1>
                 <h1 class="sobrenomePg01">Nunes</h1>
-                <p class="paragrafoPg01">Desenvolvedor Web Front-End</p>
+                <p class="paragrafoPg01">Desenvolvedor Web Full-Stack</p>
                 <hr>
                 <div class="btnPg01">
-                    <button class="btnSkills"><a href="#skills">Software Skills</a></button>
+                    <button class="btnSkills"><a href="#skills">Presentation Links</a></button>
                 </div>
                 <div class="links">
                     <a href="https://github.com/Alyssonln" target="_blank"><img src="./img/github.jpg" alt=""></a>
                     <a href="https://www.linkedin.com/in/alysson-nunes" target="_blank"><img src="./img/linkedin.jpg" alt=""></a>
                     <a href="https://www.instagram.com/alyssonlnunes/" target="_blank"><img src="./img/instagram.jpg" alt=""></a>
                 </div>
-            </div>
-        </section>
-        <section id="skills" class=" section skills">
-            <div class="paragrafo">
-                <p>
-                    Continue curioso, continue aprendendo e continue crescendo. Sempre se esforce para ser melhor do que ontem.
-                    <br><br>
-                    <span>— Chris Coyier</span>
-                </p>
             </div>
         </section>
     </main>
